# HTTP-Server

./: .gitignore  CMakeLists.txt
content/: check.html  index.html  putcheck.txt
include/: httpRequest.hpp  httpServer.hpp  maps.hpp  methods.hpp
src/: httpRequest.cpp  httpServer.cpp  main.cpp  methods.cpp
